# MineClone

./: CMakeLists.txt  LICENSE  README.md
Data/Shaders/: basic_fragment.glsl  basic_vertex.glsl
src/: .Mesh.hpp.swp  Camera.hpp  Game.cpp  Game.hpp  Mesh.cpp  Mesh.h  Mesh.hpp
src/map/: Constants.hpp  Functions.cpp  MapBase.hpp  MapFinite.cpp  MapFinite.hpp  MapInfinite.cpp  MapInfinite.hpp
src/map/chunk/: Chunk.cpp  Chunk.hpp  ChunkBuilder.cpp  ChunkBuilder.hpp  ChunkSection.cpp  ChunkSection.hpp
src/map/data/: BlockData.cpp  BlockData.hpp  BlockDataBase.cpp  BlockDataBase.hpp
src/map/generator/: HeightMapGenerator.cpp  HeightMapGenerator.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/player/: Player.cpp  Player.hpp
src/renderer/: .SkyboxRenderer.cpp.swp  ChunkRenderer.cpp  ChunkRenderer.hpp  MasterRenderer.cpp  MasterRenderer.hpp  SkyboxRenderer.cpp  SkyboxRenderer.hpp
src/resources/: Texture.hpp
src/scenes/: ScenePlaying.cpp  ScenePlaying.hpp
src/shader/: Shader.cpp  Shader.hpp
src/util/: .Noise.cpp.swp  AABB.cpp  AABB.hpp  Files.cpp  Files.hpp  Matrices.cpp  Matrices.hpp  MeshUtil.cpp  MeshUtil.hpp  Noise.cpp  Noise.hpp  RayCast.cpp  RayCast.hpp  Vector.cpp  Vector.hpp
